:recycle: refactor domain structure. add docs

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,23 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# API Configuration
+# Format: "id|url|label_en|label_zh;id2|url2|label_en2|label_zh2"
+# Each region is separated by semicolon (;), fields within a region are separated by pipe (|)
+#
+# Fields:
+#   - id: Unique identifier (e.g., "china", "global", "dev")
+#   - url: API base URL (must end with /)
+#   - label_en: English label for display
+#   - label_zh: Chinese label for display
+#
+# These values can be overridden by:
+# 1. local.properties file (not tracked in git)
+# 2. Environment variables (export API_REGIONS="...")
+# 3. Command line: ./gradlew build -PAPI_REGIONS="id|url|label_en|label_zh"
+#
+# Example with 3 regions:
+# API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球;dev|https://dev.robin.kreedzt.com/|Development|开发环境
+
+API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球
