--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,6 @@ android.nonTransitiveRClass=true
 # 3. Command line: ./gradlew build -PAPI_REGIONS="id|url|label_en|label_zh"
 #
 # Example with 3 regions:
-# API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球;dev|https://dev.robin.kreedzt.com/|Development|开发环境
+# API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|\\u4e2d\\u56fd\\u5927\\u9646;global|https://robin.kreedzt.com/|Global|\\u5168\\u7403;dev|https://dev.robin.kreedzt.com/|Development|\\u5f00\\u53d1\\u73af\\u5883
 
-API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球
+API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|\u4e2d\u56fd\u5927\u9646;global|https://robin.kreedzt.com/|Global|\u5168\u7403
