:sparkles: add version check

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,4 +40,4 @@ android.nonTransitiveRClass=true
 # Example with 3 regions:
 # API_REGIONS=china|https://robin.kreedzt.cn/|China Mainland|\\u4e2d\\u56fd\\u5927\\u9646;global|https://robin.kreedzt.com/|Global|\\u5168\\u7403;dev|https://dev.robin.kreedzt.com/|Development|\\u5f00\\u53d1\\u73af\\u5883
 
-API_REGIONS=global|https://robin.kreedzt.com/|Global|\u5168\u7403;china|https://robin.kreedzt.cn/|China Mainland|\u4e2d\u56fd\u5927\u9646
+API_REGIONS=local|http://10.193.11.67:5800/|Local|Local;global|https://robin.kreedzt.com/|Global|\u5168\u7403;china|https://robin.kreedzt.cn/|China Mainland|\u4e2d\u56fd\u5927\u9646
