--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -86,7 +86,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Decode Keystore
-      if: env.KEYSTORE_BASE64 != ''
+      if: secrets.KEYSTORE_BASE64 != ''
       env:
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       run: |
@@ -94,9 +94,12 @@ jobs:
         echo "KEYSTORE_FILE=$PWD/release.keystore" >> $GITHUB_ENV
 
     - name: Build Release APK (Signed)
-      if: env.KEYSTORE_BASE64 != ''
+      if: secrets.KEYSTORE_BASE64 != ''
       env:
         API_REGIONS: ${{ secrets.API_REGIONS || 'china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球' }}
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
       run: |
         ./gradlew assembleRelease \
           -PAPI_REGIONS="${API_REGIONS}" \
