--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -70,6 +70,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master')
     needs: build
+    env:
+      HAS_KEYSTORE: ${{ secrets.KEYSTORE_BASE64 != '' }}
 
     steps:
     - name: Checkout code
@@ -86,7 +88,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Decode Keystore
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ env.HAS_KEYSTORE == 'true' }}
       env:
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
       run: |
@@ -94,7 +96,7 @@ jobs:
         echo "KEYSTORE_FILE=$PWD/release.keystore" >> $GITHUB_ENV
 
     - name: Build Release APK (Signed)
-      if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+      if: ${{ env.HAS_KEYSTORE == 'true' }}
       env:
         API_REGIONS: ${{ secrets.API_REGIONS || 'china|https://robin.kreedzt.cn/|China Mainland|中国大陆;global|https://robin.kreedzt.com/|Global|全球' }}
         KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
