--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master, develop ]
     tags:
-      - 'v*'
+      - '**'
   pull_request:
     branches: [ master ]
 
@@ -68,7 +68,7 @@ jobs:
   build-release:
     name: Build Release APK
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master')
+    if: startsWith(github.ref, 'refs/tags/')
     needs: build
     env:
       HAS_KEYSTORE: ${{ secrets.KEYSTORE_BASE64 != '' }}
@@ -118,7 +118,6 @@ jobs:
         retention-days: 90
 
     - name: Create GitHub Release
-      if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
       with:
         files: app/build/outputs/apk/release/*.apk
